--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
-    "prod": "pm2 app.js",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "prod": "pm2 src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
